# ml-projects-portfolio

./: .gitignore  README.md  requirements.txt
01_iris_perceptron/: Iris.ipynb  README.md  main.py  pyproject.toml
01_iris_perceptron/results/: results.txt
01_iris_perceptron/src/: __init__.py  data_loader.py  main.py  perceptron.py
02_housing_regression/: HouseLearnin.ipynb  README.md  main.py  pyproject.toml
02_housing_regression/results/: results.txt
02_housing_regression/src/: __init__.py  data_loader.py  main.py  model.py
03_fraud_detection/: FraudDetection-Isolation.ipynb  FraudDetection.ipynb  README.md  main.py  pyproject.toml
03_fraud_detection/results/: results.txt
03_fraud_detection/src/: __init__.py  data_loader.py  main.py  model.py
04_abalone_regression/: Abolone age.ipynb  README.md  main.py  pyproject.toml
04_abalone_regression/results/: results.txt
04_abalone_regression/src/: __init__.py  data_loader.py  main.py  model.py
05_breast_cancer_classification/: README.md  breast cancer.ipynb  data.csv  main.py  pyproject.toml  use_model.ipynb
05_breast_cancer_classification/Breast cancer/: Decision TreeModel.pkl  KNNModel.pkl  Logistic RegressionModel.pkl  Naive BayesModel.pkl  Random ForestModel.pkl  SGDModel.pkl  SVCModel.pkl  XGBoostModel.pkl  breast cancer.ipynb
05_breast_cancer_classification/results/: results.txt
05_breast_cancer_classification/saved_models/: Decision_Tree_model.pkl  KNN_model.pkl  Logistic_Regression_model.pkl  Naive_Bayes_model.pkl  Random_Forest_model.pkl  SGD_model.pkl  SVC_model.pkl  XGBoost_model.pkl
05_breast_cancer_classification/src/: __init__.py  data_loader.py  main.py  models.py  predict.py
06_isl_housing_classification/: Islamabad Housing-Regression.ipynb  Islamabad Housing.ipynb  README.md  app.py  main.py  pyproject.toml
06_isl_housing_classification/saved_models/: housing_xgb_pipeline.pkl
06_isl_housing_classification/src/: __init__.py  app.py  main.py  (+2 more)
07_customer_types/: README.md  app.py  pyproject.toml
08_mario_genetics/: README.md  main.py  pyproject.toml
09_hyperparameter_tuning_PSO/: README.md  main.py  pyproject.toml
10_neural_network/: README.md  app.py  data_visualisation.ipynb  pyproject.toml
10_neural_network/api/: app.py  conversion.py  neural_network.py  save_model.py
10_neural_network/src/: __init__.py  app.py  conversion.py  data_preprocessing.py  neural_network.py  pydantic_model.py  save_model.py  torch_train.py  train.py
10_neural_network/src/model/: torch_model.pth
11_convolutional_neural_network/: README.md  pyproject.toml
12_torch_CNN/: README.md  main.py  pyproject.toml
12_torch_CNN/src/: __init__.py  data_load.py  make_logger.py  model.py  model_load.py  test.py  train.py
13_NLP_RNN/: README.md  main.py  pyproject.toml
14_stock_prediction_lstm/: README.md  get_prediction_sample.ipynb  main.py  pyproject.toml  visualise.ipynb
14_stock_prediction_lstm/model/: model.pt
14_stock_prediction_lstm/src/: __init__.py  data_preprocessing.py  predict.py  set_logger.py  stock_lstm.py  train.py
15_CNN-GRU_music_perferance/: README.md  app.py  main.py  pyproject.toml  requirments.txt
15_CNN-GRU_music_perferance/src/: __init__.py  audio_preprocessing.py  data_scraping.py  hybrid_model.py  predict.py  save_model.py  set_logger.py  train.py
16_CDA/: README.md  pyproject.toml  visualise_data.ipynb
16_session_summary/: main.py  pyproject.toml
songs/: Bloodborne Soundtrack OST - Ludwig, The Accursed & Holy Blade (The Old Hunters).webm
(+30 files in other folders)
