[project]
name = "12-torch-cnn"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.2",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
