[project]
name = "15-cnn-gru-music-perferance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "altair==6.2.2",
    "anyio==4.14.1",
    "attrs==26.1.0",
    "audioread==3.1.0",
    "blinker==1.9.0",
    "brotli==1.2.0",
    "cachetools==7.1.4",
    "certifi==2026.6.17",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.2",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "decorator==5.3.1",
    "filelock==3.29.0",
    "fonttools==4.63.0",
    "fsspec==2026.4.0",
    "gitdb==4.0.12",
    "gitpython==3.1.50",
    "h11==0.16.0",
    "httptools==0.8.0",
    "idna==3.18",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.5.0",
    "lazy-loader==0.5",
    "librosa==0.11.0",
    "llvmlite==0.47.0",
    "markupsafe==3.0.3",
    "matplotlib==3.11.0",
    "mpmath==1.3.0",
    "msgpack==1.2.1",
    "mutagen==1.48.1",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numba==0.65.1",
    "numpy==2.4.4",
    "packaging==26.2",
    "pandas==3.0.3",
    "panns-inference==0.1.1",
    "pillow==12.2.0",
    "platformdirs==4.10.0",
    "pooch==1.9.0",
    "protobuf==7.35.1",
    "pyarrow==24.0.0",
    "pycparser==3.0",
    "pycryptodomex==3.23.0",
    "pydeck==0.9.3",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.32",
    "referencing==0.37.0",
    "requests==2.34.2",
    "rpds-py==2026.6.3",
    "ruff>=0.15.21",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "setuptools==70.2.0",
    "six==1.17.0",
    "smmap==5.0.3",
    "soundfile==0.14.0",
    "soxr==1.1.0",
    "starlette==1.3.1",
    "streamlit==1.58.0",
    "sympy==1.14.0",
    "tenacity==9.1.4",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "torch==2.12.1+cpu",
    "torchaudio==2.11.0",
    "torchlibrosa==0.1.0",
    "torchvision==0.27.1+cpu",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "uvicorn==0.50.2",
    "watchdog==6.0.0",
    "websockets==16.0",
    "yt-dlp==2026.6.9",
    "yt-dlp-ejs==0.8.0",
]
